# serenity

./: CMakeLists.txt
AK/: Array.h  ByteBuffer.h  Debug.h.in  DoublyLinkedList.h  FloatExtractor.h  FloatingPointToString.cpp  FloatingPointToString.h  Format.cpp  Function.h  GenericLexer.h  JsonParser.cpp  JsonParser.h  SinglyLinkedList.h  StringBuilder.cpp  StringBuilder.h  Utf.h  Vector.h
Base/res/apps/: PathClipDemo.af  PathClipper.af
Kernel/: CMakeLists.txt
Kernel/Prekernel/: CMakeLists.txt
Ladybird/: CMakeLists.txt
Libraries/LibGUI/: Painter.cpp
Libraries/LibGfx/: AffineTransform.cpp  AffineTransform.h  Painter.cpp  Painter.h  Path.cpp  Point.h
Libraries/LibWeb/Layout/: LayoutSVG.cpp  LayoutSVGGraphics.cpp  LayoutSVGPath.cpp  LayoutSVGPath.h  LayoutSVGSVG.cpp  LayoutSVGSVG.h
Libraries/LibWeb/SVG/: SVGContext.h  SVGGraphicsElement.h  SVGPathElement.cpp  SVGPathElement.h  SVGSVGElement.cpp  SVGSVGElement.h
Meta/CMake/: all_the_debug_macros.cmake  lagom_options.cmake  libweb_generators.cmake  utils.cmake
Meta/Lagom/: CMakeLists.txt
Meta/Lagom/ClangPlugins/: CMakeLists.txt  LambdaCapturePluginAction.cpp  LibJSGCPluginAction.cpp  LibJSGCPluginAction.h
Meta/Lagom/Tools/: CMakeLists.txt
Meta/Lagom/Tools/ClangPlugin/: CMakeLists.txt  DiagConsumer.cpp  DiagConsumer.h  DiagDelegatingASTConsumer.h  FileProcessor.cpp  FileProcessor.h  LambdaCapturePluginAction.cpp  LambdaCapturePluginAction.h  LibJSGCPluginAction.cpp  LibJSGCPluginAction.h  VisitedObjectSet.h  main.cpp
Meta/Lagom/Tools/ClangPlugin/Tests/: lambda_capture_local_by_ref.cpp  lambda_capture_local_marked_ignore_by_ref.cpp  lambda_marked_noescape_capture_local_by_ref.cpp
Meta/Lagom/Tools/ClangPlugin/Tests/LibJSGCTests/: calling_base_visit_edges_not_through_using_decl.cpp  cell_member_not_wrapped.cpp  gc_allocated_member_is_accessed.cpp  gc_allocated_member_is_visited.cpp  handle_and_safefunction_fields.cpp  missing_call_to_base_visit_edges.cpp  missing_member_in_visit_edges.cpp  missing_visit_edges_method.cpp  non_cell_class.cpp  not_visiting_rawgcptr.cpp  wrapping_non_cell_member.cpp
Meta/Lagom/Tools/ClangPlugin/Tests/LibJSGCTests/Macros/: classes_are_missing_expected_macros.cpp  classes_have_expected_macros.cpp  classes_have_incorrect_macro_types.cpp  nested_macros.cpp  wrong_basename_arg.cpp  wrong_classname_arg.cpp
Meta/Lagom/Tools/LibJSGCVerifier/: CMakeLists.txt
Meta/Lagom/Tools/LibJSGCVerifier/src/: CellsHandler.cpp  CellsHandler.h  CollectCellsHandler.cpp  CollectCellsHandler.h  main.cpp  main.py
Meta/Lagom/Tools/LibJSGCVerifier2/: CMakeLists.txt  main.cpp
Tests/: CMakeLists.txt
Tests/ClangPlugin/: CMakeLists.txt  test-runner.cpp
Tests/ClangPlugins/: CMakeLists.txt  LibJSMock.h  lit.cfg.py  lit.site.cfg.py.in  test.cpp
Tests/ClangPlugins/LambdaTests/: escaping_parameter_by_ref_capture.cpp  escaping_parameter_by_ref_capture_marked_ignore.cpp  escaping_parameter_by_ref_capture_marked_noescape.cpp  escaping_parameter_by_value_capture.cpp  lambda_capture_local_by_ref.cpp  lambda_capture_local_by_ref_marked_does_not_escape.cpp  lambda_capture_local_marked_ignore_by_ref.cpp  lambda_marked_noescape_capture_local_by_ref.cpp  nonescaping_parameter_by_ref_capture.cpp  recursive_escaping_lambda.cpp  recursive_nonescaping_lambda.cpp
Tests/ClangPlugins/LibJSGCTests/: calling_base_visit_edges_not_through_using_decl.cpp  cell_member_not_wrapped.cpp  gc_allocated_member_is_accessed.cpp  gc_allocated_member_is_visited.cpp  missing_call_to_base_visit_edges.cpp  missing_member_in_visit_edges.cpp  missing_visit_edges_method.cpp  non_cell_class.cpp  not_visiting_rawgcptr.cpp  wrapping_non_cell_member.cpp
Tests/LibCore/: TestLibCoreDeferredInvoke.cpp  TestLibCorePromise.cpp  TestLibCoreSharedSingleProducerCircularQueue.cpp
Tests/LibPDF/: CMakeLists.txt  test-filter-ascii.cpp
Tests/LibTLS/: TestTLSHandshake.cpp
Tests/LibThreading/: TestThread.cpp
Userland/: CMakeLists.txt
Userland/Applications/: CMakeLists.txt
Userland/Applications/Assistant/: CMakeLists.txt
Userland/Applications/Browser/: CMakeLists.txt
Userland/Applications/PDFViewer/: PDFViewer.cpp  PDFViewer.h  PDFViewerWidget.cpp  PDFViewerWidget.h  main.cpp
Userland/Applications/Piano/: KeysWidget.cpp  RollWidget.cpp
Userland/Applications/PixelPaint/: ImageEditor.cpp  LayerListWidget.cpp  MoveTool.cpp
Userland/Applications/SpaceAnalyzer/: TreeMapWidget.cpp
Userland/Applications/Spreadsheet/: CMakeLists.txt
Userland/Applications/Terminal/: main.cpp
Userland/Applications/TextEditor/: CMakeLists.txt
Userland/Applications/ThemeEditor/: main.cpp
Userland/Demos/: CMakeLists.txt
Userland/Demos/PathClipDemo/: CMakeLists.txt  DemoList.cpp  DemoList.h  GridWidget.cpp  GridWidget.h  PathClipWidget.cpp  PathClipWidget.h  main.cpp
Userland/Demos/PathClipper/: CMakeLists.txt  DemoList.cpp  DemoList.h  GridWidget.cpp  GridWidget.h  PathClipperWidget.cpp  PathClipperWidget.h  main.cpp
Userland/DevTools/HackStudio/: CMakeLists.txt
Userland/Games/Solitaire/: CardStack.cpp  SolitaireWidget.cpp  SolitaireWidget.h
Userland/Libraries/: CMakeLists.txt
Userland/Libraries/LibGUI/: Application.cpp  Button.cpp  HeaderView.cpp  IconView.cpp  Label.cpp  ListView.cpp  Painter.cpp  ScrollableWidget.cpp  Scrollbar.cpp  TabWidget.cpp  TextEditor.cpp  Widget.cpp
Userland/Libraries/LibGfx/: AAPainter.cpp  (+18 more)
Userland/Services/: CMakeLists.txt
Userland/Utilities/: CMakeLists.txt  clip.cpp  js.cpp  test-pthread.cpp  test-web.cpp
(+308 files in other folders)
